...
    setLastCompletion(null);
  }

  return (
    <>
      <Screen
        testID="today-screen"
        refreshControl={
          <RefreshControl
            refreshing={refreshing}
            tintColor={theme.primary}
            onRefresh={() => {
              setRefreshing(true);
...
